--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,36 @@
 * {
-  color: #d3bc8d;
+  color: #ffffff;
 }
 
-#aboutme {
-  position: relative;
-  left: 0;
-}
+
 
 nav ul a,
 nav .brand-logo {
-  color: #d3bc8d;
+  color: #ffffff;
 }
 
-body {
-  background-color: rgb(24, 24, 24);
+body {background-image: url("/Assets/background-project2.jpg"); /* The image used */
+  background-color: #000000; /* Used if the image is unavailable */
+  height: 500px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
 }
+
+
 
 .brand-logo {
   overflow: clip;
 }
 
 #navigation {
-  background-color: rgb(24, 24, 24);
+  background-color: rgb(0, 0, 0);
 }
 
 .card {
-  background-color: transparent;
+  background-image: url("/Assets/background-project2.jpg")
   max-height: 400px;
-  border: 2px solid #d3bc8d;
+  border: 2px solid #f6f6f6;
 }
 
 p {
@@ -35,69 +38,15 @@ p {
 }
 
 h1, h2, h4 {
-  color:  #d3bc8d;
+  color:  #ffffff;
 }
 
 h5 {
   color: white;
 }
 
-@media only screen and (max-width : 400px) {
-  .carousel-item {
-    position: absolute;
-    max-width: 420px;
-  }
-}
 
-li {
-  color: #d3bc8d;
-  padding-bottom: 5px;
-}
 
-.carousel>.item>img {
-  display: block;
-  height: auto;
-  max-width: 100%;
-  width: 100%;
-}
-
-.sidenav-trigger {
-  color: #26a69a;
-}
-
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-
-.parallax-container .section {
-  width: 100%;
-}
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
-
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
-}
 
 footer.page-footer {
   margin: 0;
@@ -106,5 +55,5 @@ footer.page-footer {
 footer {
   text-align: center;
   padding-bottom: 7px;
-  background-color: rgb(24, 24, 24);
+  background-color: rgb(0, 0, 0);
 }
