setup trucks.handlebars; confirm properties from database work

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
 
 <body>
   <header class="inner">
-    <h2><a href="/"><i class="fas fa-code"></i>
-        FoodTrucks</a></h2>
+    
+    <h2><a href="/">Food Truck Finder</a></h2>
     <nav>
       <ul>
         <li>
@@ -32,7 +32,10 @@
     </nav>
   </header>
 
+  <div class="container">
   {{{body}}}
+  </div>
+
 </body>
 
 </html>
