update landing page background img

--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -15,8 +15,7 @@
 
 <body>
   <header>
-    <h2><a href="/"><i class="fas fa-code"></i>
-        Food Truck Finder</a></h2>
+    <h2><a href="/"> Food Truck Finder</a></h2>
     <nav>
       <ul>
         <li>
