add class and method to add.handlebars form

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -2,7 +2,7 @@
     <div class="form-wrap">
       <h1>Add A Food Truck</h1>
       <p></p>
-      <form>
+      <form action="/trucks/add" method="POST">
         <div class="input-group">
           <label for="title">Food Truck Name</label>
           <input type="text" name="title" id="title" class="input-box" placeholder="eg. El Jefe"
