confirm able to add a food truck to database via form in add trucroute

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -20,7 +20,7 @@
         </div>
         <div class="input-group">
           <label for="budget">Location</label>
-          <input type="number" name="location" id="budget" class="input-box" placeholder="eg. 123 West 6th St. Austin TX 78724"
+          <input type="text" name="location" id="budget" class="input-box" placeholder="eg. 123 West 6th St. Austin TX 78724"
             value={{location}}>
         </div>
         <div class="input-group">
@@ -30,7 +30,7 @@
         </div>
         <div class="input-group">
           <label for="budget">Contact Phone</label>
-          <input type="email" name="contact_phone" id="contactemail" class="input-box" placeholder="Enter a phone number"
+          <input type="phone" name="contact_phone" id="contactemail" class="input-box" placeholder="Enter a phone number"
             value={{contact_phone}}>
         </div>
         <input type="submit" value="Add Truck" class="btn btn-reverse">
