--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
   <section id="search" class="search-wrap">
     <h1>Find A Food Truck</h1>
-    <form action="gigs.html" class="search-form">
+    <form action="trucks/search" class="search-form">
       <i class="fas fa-search"></i>
       <input type="search" name="term" placeholder="bbq, vegan, desserts, tacos etc...">
       <input type="submit" value="Search">
