fix /trucks link

--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -22,7 +22,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/trucks">All Trucks</a>
+          <a href="/trucks/">All Trucks</a>
         </li>
         <li>
           <a href="/trucks/add">Add Truck</a>
