--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -33,5 +33,30 @@
 
   {{{body}}}
 </body>
+<!-- FOOTER -->
+  <footer class="fixed-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12 center">
+          <br>
+          <h5 class="white-text">Problems with Website let us know</h5>
+          <ul>
+            <li>Email: <a href="mailto:Beef-boyz@beefy-boyz.com" target="_blank">Beef-boyz@beefy-boyz.com</a></li>
+          </ul>
+        </div>
+        <div class="col l6 s12 center">
+          <br>
+          <h5 class="white-text">Credit to the Developers</h5>
+          <ul>
+            <li><a href="https://github.com/justinpricer" target="_blank">Justin Pricer</a></li>
+            <li><a href="https://github.com/rolara57" target="_blank">Roger lara</a></li>
+            <li><a href="https://github.com/jasandper" target="_blank">Jason Perez</a></li>
+            <li><a href="https://github.com/chaseKay97" target="_blank">Chase Kilpatirck</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- END FOOTER -->
 
 </html>
